[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.0"
pretty_env_logger = "0.4"
lazy_static = "1.4.0"
config = "0.13.3"
color-eyre = "0.6.2"
chrono = "0.4.22"
texting_robots = "0.2"
lru-cache = "0.1.2"
ureq = { version = "2.5.0", features = ["json"] }
url = "2.3.1"
scraper = "0.16.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
sightnet_core = { path = "../sightnet-core" }